Clean labels for web-ttrss

--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: ttrss
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
+    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
