--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-service.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-service.yaml.j2
@@ -4,12 +4,11 @@ metadata:
   name: ttrss-pgsql
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: pgsql
+    {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss_pgsql.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   clusterIP: None
   ports:
   - port: 5432
   selector:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: pgsql
+    {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(4) }}
