--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
@@ -4,20 +4,19 @@ metadata:
   name: ttrss-pgsql
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: pgsql
+    {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss_pgsql.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: ttrss
-      app.kubernetes.io/component: pgsql
+      {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: ttrss
-        app.kubernetes.io/component: pgsql
+        {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(8) }}
+        {{ ttrss_pgsql.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ ttrss_pgsql.container.image }}"
@@ -71,5 +70,4 @@ spec:
           storage: 1G
       selector:
         matchLabels:
-          app.kubernetes.io/name: ttrss
-          app.kubernetes.io/component: pgsql
+          {{ ttrss_pgsql.labels_def | to_nice_yaml() | indent(10) }}
