--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: ttrss-config
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: ttrss
+    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   nginx_site.conf:  |
     {{ lookup('template', role_path + '/app/config/nginx_site.conf.j2')  | replace('\n', '\n    ') }}
