--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-deployment.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: ttrss
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: ttrss
+    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: ttrss
-      app.kubernetes.io/component: ttrss
+      {{ ttrss.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: ttrss
-        app.kubernetes.io/component: ttrss
+        {{ ttrss.labels_def | to_nice_yaml() | indent(8) }}
+        {{ ttrss.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ ttrss.container.image }}"
