--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-service.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-service.yaml.j2
@@ -4,11 +4,10 @@ metadata:
   name: ttrss
   namespace: {{ ttrss.namespace }}
   labels:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: ttrss
+    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
   selector:
-    app.kubernetes.io/name: ttrss
-    app.kubernetes.io/component: ttrss
+    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
