--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: heimdall-config
   namespace: {{ heimdall.namespace }}
   labels:
-    app.kubernetes.io/name: heimdall
-    app.kubernetes.io/component: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
+    {{ heimdall.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   .env: |
     {{ lookup('template', role_path + '/app/config/env.j2')  | replace('\n', '\n    ') }}
