--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: heimdall
   namespace: {{ heimdall.namespace }}
   labels:
-    app.kubernetes.io/name: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
+    {{ heimdall.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
