--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-heimdall
   namespace: {{ heimdall.namespace }}
   labels:
-    app.kubernetes.io/name: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
+    {{ heimdall.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: heimdall
-      app.kubernetes.io/component: heimdall
+      {{ heimdall.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
