--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/service.yaml.j2
@@ -4,11 +4,10 @@ metadata:
   name: heimdall
   namespace: {{ heimdall.namespace }}
   labels:
-    app.kubernetes.io/name: heimdall
-    app.kubernetes.io/component: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
+    {{ heimdall.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
   selector:
-    app.kubernetes.io/name: heimdall
-    app.kubernetes.io/component: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
