--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: heimdall
   namespace: {{ heimdall.namespace }}
   labels:
-    app.kubernetes.io/name: heimdall
-    app.kubernetes.io/component: heimdall
+    {{ heimdall.labels_def | to_nice_yaml() | indent(4) }}
+    {{ heimdall.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: heimdall
-      app.kubernetes.io/component: heimdall
+      {{ heimdall.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: heimdall
-        app.kubernetes.io/component: heimdall
+        {{ heimdall.labels_def | to_nice_yaml() | indent(8) }}
+        {{ heimdall.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ heimdall.container.image }}"
@@ -65,5 +64,4 @@ spec:
           storage: 128M
       selector:
         matchLabels:
-          app.kubernetes.io/name: heimdall
-          app.kubernetes.io/component: heimdall
+          {{ heimdall.labels_def | to_nice_yaml() | indent(10) }}
