Clean labels for infra-unifi

--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: unifi
   namespace: {{ unifi.namespace }}
   labels:
-    app.kubernetes.io/name: unifi
+    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
+    {{ unifi.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
