--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-public.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-public.yaml.j2
@@ -5,8 +5,8 @@ metadata:
   name: unifi-frontend
   namespace: {{ unifi.namespace }}
   labels:
-    app.kubernetes.io/name: unifi
-    app.kubernetes.io/component: unifi
+    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
+    {{ unifi.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   # Port used for controller GUI/API as seen in a web browser
@@ -14,5 +14,4 @@ spec:
     port: 443
     targetPort: 8443
   selector:
-    app.kubernetes.io/name: unifi
-    app.kubernetes.io/component: unifi
+    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
