--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-service.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-service.yaml.j2
@@ -4,11 +4,11 @@ metadata:
   name: homeassistant
   namespace: {{ homeassistant.namespace }}
   labels:
-    app.kubernetes.io/name: homeassistant
+    {{ homeassistant.labels_def | to_nice_yaml() | indent(4) }}
+    {{ homeassistant.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 8123
   selector:
-    app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: homeassistant
+    {{ homeassistant.labels_def | to_nice_yaml() | indent(4) }}
