--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
@@ -4,12 +4,11 @@ metadata:
   name: homeassistant-mysql
   namespace: {{ homeassistant.namespace }}
   labels:
-    app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: mysql
+    {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(4) }}
+    {{ homeassistant_mysql.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
     - port: 3306
   selector:
-    app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: mysql
+    {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(4) }}
   clusterIP: None
