--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-homeassistant
   namespace: {{ homeassistant.namespace }}
   labels:
-    app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: homeassistant
+    {{ homeassistant.labels_def | to_nice_yaml() | indent(4) }}
+    {{ homeassistant.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: homeassistant
-      app.kubernetes.io/component: homeassistant
+      {{ homeassistant.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     - ports:
@@ -40,18 +39,17 @@ spec:
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-to-mysql
+  name: allow-to-homeassistant-mysql
   namespace: {{ homeassistant.namespace }}
   labels:
-    app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: mysql
+    {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(4) }}
+    {{ homeassistant_mysql.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: homeassistant
-    app.kubernetes.io/component: mysql
+      {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from homeassistant
@@ -60,5 +58,4 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: homeassistant
-              app.kubernetes.io/component: homeassistant
+              {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
