--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
@@ -39,8 +39,7 @@ spec:
               name: {{ homeassistant.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: homeassistant
-              app.kubernetes.io/component: homeassistant
+              {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
 
         # Allow from roomassistant
         - namespaceSelector:
