--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
@@ -4,11 +4,11 @@ metadata:
   name: nodered
   namespace: {{ nodered.namespace }}
   labels:
-    app.kubernetes.io/name: nodered
+    {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nodered.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 1880
   selector:
-    app.kubernetes.io/name: nodered
-    app.kubernetes.io/component: nodered
+    {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
