--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: nodered
   namespace: {{ nodered.namespace }}
   labels:
-    app.kubernetes.io/name: nodered
-    app.kubernetes.io/component: nodered
+    {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nodered.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: nodered
-      app.kubernetes.io/component: nodered
+      {{ nodered.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nodered
-        app.kubernetes.io/component: nodered
+        {{ nodered.labels_def | to_nice_yaml() | indent(8) }}
+        {{ nodered.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ nodered.container.image }}"
@@ -71,5 +70,4 @@ spec:
           storage: 128M
       selector:
         matchLabels:
-          app.kubernetes.io/name: nodered
-          app.kubernetes.io/component: nodered
+          {{ nodered.labels_def | to_nice_yaml() | indent(10) }}
