--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/secret-certs.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/secret-certs.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: mosquitto-certs
   namespace: {{ mosquitto.namespace }}
   labels:
-    app.kubernetes.io/name: mosquitto
-    app.kubernetes.io/component: mosquitto
+    {{ mosquitto.labels_def | to_nice_yaml() | indent(4) }}
+    {{ mosquitto.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for mosquitto_generated_certificate_file in mosquitto_generated_certificate_files.results %}
   {{ mosquitto_generated_certificate_file.source | basename }}: {{ mosquitto_generated_certificate_file.content }}
