--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/service.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: mosquitto
   namespace: {{ mosquitto.namespace }}
   labels:
-    app.kubernetes.io/name: mosquitto
+    {{ mosquitto.labels_def | to_nice_yaml() | indent(4) }}
+    {{ mosquitto.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 1883
@@ -12,5 +13,4 @@ spec:
   - port: 8883
     name: mqtts
   selector:
-    app.kubernetes.io/name: mosquitto
-    app.kubernetes.io/component: mosquitto
+    {{ mosquitto.labels_def | to_nice_yaml() | indent(4) }}
