Clean labels for home-roomassistant

--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
@@ -46,5 +46,4 @@ spec:
               name: {{ roomassistant.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: roomassistant
-              app.kubernetes.io/component: roomassistant
+              {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
