--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -4,21 +4,20 @@ metadata:
   name: roomassistant
   namespace: {{ roomassistant.namespace }}
   labels:
-    app.kubernetes.io/name: roomassistant
-    app.kubernetes.io/component: roomassistant
+    {{ roomassistant.labels_def | to_nice_yaml() | indent(4) }}
+    {{ roomassistant.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: roomassistant
-      app.kubernetes.io/component: roomassistant
+      {{ roomassistant.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: roomassistant
-        app.kubernetes.io/component: roomassistant
+        {{ roomassistant.labels_def | to_nice_yaml() | indent(8) }}
+        {{ roomassistant.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ roomassistant.container.image }}"
