--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/config-configMap.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/config-configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: airsonic-config
   namespace: {{ airsonic.namespace }}
   labels:
-    app.kubernetes.io/name: airsonic
-    app.kubernetes.io/component: airsonic
+    {{ airsonic.labels_def | to_nice_yaml() | indent(4) }}
+    {{ airsonic.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for airsonic_config_file in airsonic_config_files %}
   {{ airsonic_config_file | basename | replace(".j2", "") }}: |
