--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: airsonic
   namespace: {{ airsonic.namespace }}
   labels:
-    app.kubernetes.io/name: airsonic
-    app.kubernetes.io/component: airsonic
+    {{ airsonic.labels_def | to_nice_yaml() | indent(4) }}
+    {{ airsonic.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: airsonic
-      app.kubernetes.io/component: airsonic
+      {{ airsonic.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: airsonic
-        app.kubernetes.io/component: airsonic
+        {{ airsonic.labels_def | to_nice_yaml() | indent(8) }}
+        {{ airsonic.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       initContainers:
       - name: inject-properties
@@ -113,8 +112,7 @@ spec:
           storage: 256M
       selector:
         matchLabels:
-          app.kubernetes.io/name: airsonic
-          app.kubernetes.io/component: airsonic
+          {{ airsonic.labels_def | to_nice_yaml() | indent(10) }}
           storage: data
   - metadata:
       name: airsonic-playlists-pv-claim
@@ -126,6 +124,5 @@ spec:
           storage: 256M
       selector:
         matchLabels:
-          app.kubernetes.io/name: airsonic
-          app.kubernetes.io/component: airsonic
+          {{ airsonic.labels_def | to_nice_yaml() | indent(10) }}
           storage: playlists
