Clean labels for stream-plex

--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: plex
   namespace: {{ plex.namespace }}
   labels:
-    app.kubernetes.io/name: plex
+    {{ plex.labels_def | to_nice_yaml() | indent(4) }}
+    {{ plex.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
