--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-plex
   namespace: {{ plex.namespace }}
   labels:
-    app.kubernetes.io/name: plex
-    app.kubernetes.io/component: plex
+    {{ plex.labels_def | to_nice_yaml() | indent(4) }}
+    {{ plex.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: plex
-      app.kubernetes.io/component: plex
+      {{ plex.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
