--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,20 +4,19 @@ metadata:
   name: plex
   namespace: {{ plex.namespace }}
   labels:
-    app.kubernetes.io/name: plex
-    app.kubernetes.io/component: plex
+    {{ plex.labels_def | to_nice_yaml() | indent(4) }}
+    {{ plex.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: plex
-      app.kubernetes.io/component: plex
+      {{ plex.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: plex
-        app.kubernetes.io/component: plex
+        {{ plex.labels_def | to_nice_yaml() | indent(8) }}
+        {{ plex.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ plex.container.image }}"
@@ -64,5 +63,4 @@ spec:
           storage: 1G
       selector:
         matchLabels:
-          app.kubernetes.io/name: plex
-          app.kubernetes.io/component: plex
+          {{ plex.labels_def | to_nice_yaml() | indent(10) }}
