--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-gitlab
   namespace: {{ gitlab.namespace }}
   labels:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gitlab.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: gitlab
-      app.kubernetes.io/component: gitlab
+      {{ gitlab.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
