--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service-prometheus.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: gitlab-prometheus
   namespace: {{ gitlab.namespace }}
   labels:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gitlab.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: gitlab
 spec:
   ports:
@@ -34,5 +34,4 @@ spec:
     name: gitaly-metrics
     targetPort: gitaly-metrics
   selector:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
