--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service.yaml.j2
@@ -4,12 +4,11 @@ metadata:
   name: gitlab
   namespace: {{ gitlab.namespace }}
   labels:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gitlab.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
