--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: gitlab
   namespace: {{ gitlab.namespace }}
   labels:
-    app.kubernetes.io/name: gitlab
-    app.kubernetes.io/component: gitlab
+    {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gitlab.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: gitlab
-      app.kubernetes.io/component: gitlab
+      {{ gitlab.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: gitlab
-        app.kubernetes.io/component: gitlab
+        {{ gitlab.labels_def | to_nice_yaml() | indent(8) }}
+        {{ gitlab.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ gitlab.container.image }}"
@@ -86,8 +85,7 @@ spec:
           storage: 8M
       selector:
         matchLabels:
-          app.kubernetes.io/name: gitlab
-          app.kubernetes.io/component: gitlab
+          {{ gitlab.labels_def | to_nice_yaml() | indent(10) }}
           storage: config
   - metadata:
       name: gitlab-data-pv-claim
@@ -99,6 +97,5 @@ spec:
           storage: 1G
       selector:
         matchLabels:
-          app.kubernetes.io/name: gitlab
-          app.kubernetes.io/component: gitlab
+          {{ gitlab.labels_def | to_nice_yaml() | indent(10) }}
           storage: data
