Clean labels for download-sickchill

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/networkPolicies.yaml.j2
@@ -32,5 +32,4 @@ spec:
               name: {{ sickchill.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: sickchill
-              app.kubernetes.io/component: sickchill
+              {{ sickchill.labels_def | to_nice_yaml() | indent(14) }}
