--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-sickchill
   namespace: {{ sickchill.namespace }}
   labels:
-    app.kubernetes.io/name: sickchill
-    app.kubernetes.io/component: sickchill
+    {{ sickchill.labels_def | to_nice_yaml() | indent(4) }}
+    {{ sickchill.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: sickchill
-      app.kubernetes.io/component: sickchill
+      {{ sickchill.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     - ports:
