--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-deluge
   namespace: {{ deluge.namespace }}
   labels:
-    app.kubernetes.io/name: deluge
-    app.kubernetes.io/component: deluge
+    {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
+    {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: deluge
-      app.kubernetes.io/component: deluge
+      {{ deluge.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
