--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/service.yaml.j2
@@ -4,12 +4,12 @@ metadata:
   name: deluge
   namespace: {{ deluge.namespace }}
   labels:
-    app.kubernetes.io/name: deluge
+    {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
+    {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 8112
     name: webui
   selector:
-    app.kubernetes.io/name: deluge
-    app.kubernetes.io/component: deluge
+    {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
