--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: deluge
   namespace: {{ deluge.namespace }}
   labels:
-    app.kubernetes.io/name: deluge
-    app.kubernetes.io/component: deluge
+    {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
+    {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: deluge
-      app.kubernetes.io/component: deluge
+      {{ deluge.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: deluge
-        app.kubernetes.io/component: deluge
+        {{ deluge.labels_def | to_nice_yaml() | indent(8) }}
+        {{ deluge.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       initContainers:
       - name: inject-config
@@ -77,5 +76,4 @@ spec:
           storage: 256M
       selector:
         matchLabels:
-          app.kubernetes.io/name: deluge
-          app.kubernetes.io/component: deluge
+          {{ deluge.labels_def | to_nice_yaml() | indent(10) }}
