Clean labels for download-pyload

--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: pyload
   namespace: {{ pyload.namespace }}
+  labels:
+    {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
+    {{ pyload.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
