--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
@@ -4,12 +4,12 @@ metadata:
   name: pyload
   namespace: {{ pyload.namespace }}
   labels:
-    app.kubernetes.io/name: pyload
+    {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
+    {{ pyload.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 8000
     name: webui
   selector:
-    app.kubernetes.io/name: pyload
-    app.kubernetes.io/component: pyload
+    {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
