--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: sabnzbd
   namespace: {{ sabnzbd.namespace }}
+  labels:
+    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
