--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-sabnzbd
   namespace: {{ sabnzbd.namespace }}
   labels:
-    app.kubernetes.io/name: sabnzbd
-    app.kubernetes.io/component: sabnzbd
+    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: sabnzbd
-      app.kubernetes.io/component: sabnzbd
+      {{ sabnzbd.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     - ports:
