--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
@@ -4,12 +4,12 @@ metadata:
   name: sabnzbd
   namespace: {{ sabnzbd.namespace }}
   labels:
-    app.kubernetes.io/name: sabnzbd
+    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     targetPort: 8080
     name: http
   selector:
-    app.kubernetes.io/name: sabnzbd
-    app.kubernetes.io/component: sabnzbd
+    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
