--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: sabnzbd
   namespace: {{ sabnzbd.namespace }}
   labels:
-    app.kubernetes.io/name: sabnzbd
-    app.kubernetes.io/component: sabnzbd
+    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: sabnzbd
-      app.kubernetes.io/component: sabnzbd
+      {{ sabnzbd.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: sabnzbd
-        app.kubernetes.io/component: sabnzbd
+        {{ sabnzbd.labels_def | to_nice_yaml() | indent(8) }}
+        {{ sabnzbd.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       initContainers:
       - name: inject-config
@@ -77,5 +76,4 @@ spec:
           storage: 32M
       selector:
         matchLabels:
-          app.kubernetes.io/name: sabnzbd
-          app.kubernetes.io/component: sabnzbd
+          {{ sabnzbd.labels_def | to_nice_yaml() | indent(10) }}
