--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/tls-secret.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/tls-secret.yaml.j2
@@ -4,8 +4,7 @@ metadata:
   name: ingress-tls
   namespace: {{ application_namespace }}
   labels:
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/component: ingress-nginx
+    {{ ingress_nginx.labels_def | to_nice_yaml() | indent(4) }}
 data:
   tls.key: {{ ingress_tls_key_file.content }}
   tls.crt: {{ ingress_tls_cert_file.content }}
