--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/networkPolicies.yaml.j2
@@ -21,10 +21,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
 
     # Allow from alertmanager
     - ports:
