--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/ingress-nginx.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/ingress-nginx.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app.kubernetes.io/name: ingress-nginx
+    {{ ingress_nginx.labels_def | to_nice_yaml() | indent(4) }}
   name: ingress-nginx
   namespace: {{ prometheus.namespace }}
 spec:
