--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/networkPolicies.yaml.j2
@@ -46,7 +46,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
