--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/networkPolicies.yaml.j2
@@ -17,5 +17,5 @@ spec:
     # Allow from everywhere
     # (needed for both `kubectl top` and the kubernetes-dashboard)
     - ports:
-        - port: metrics
+        - port: main-port
       from: []
