Add readinessProbe for infra-kubernetes-metrics-server

--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
@@ -41,6 +41,13 @@ spec:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
           runAsUser: 1000
+        readinessProbe:
+          httpGet:
+            scheme: HTTPS
+            path: /healthz
+            port: main-port
+          initialDelaySeconds: 10
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ kubernetes_metrics_server.container.requests_cpu }}"
