--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
@@ -202,7 +202,8 @@ spec:
           image: "{{ kubernetes_dashboard.container.image }}"
           imagePullPolicy: Always
           ports:
-            - containerPort: 8443
+            - name: https
+              containerPort: 8443
               protocol: TCP
           args:
             - --auto-generate-certificates
@@ -224,11 +225,16 @@ spec:
               # Create on-disk volume to store exec logs
             - mountPath: /tmp
               name: tmp-volume
+          readinessProbe:
+            httpGet:
+              scheme: HTTPS
+              path: /
+              port: https
           livenessProbe:
             httpGet:
               scheme: HTTPS
               path: /
-              port: 8443
+              port: https
             initialDelaySeconds: 30
             timeoutSeconds: 30
       volumes:
@@ -256,7 +262,7 @@ metadata:
 spec:
   ports:
     - port: 8000
-      targetPort: 8000
+      targetPort: http
   selector:
     {{ kubernetes_dashboard_metrics_scraper.labels_def | to_nice_yaml() | indent(4) }}
 
@@ -286,7 +292,8 @@ spec:
         - name: dashboard-metrics-scraper
           image: "{{ kubernetes_dashboard_metrics_scraper.container.image }}"
           ports:
-            - containerPort: 8000
+            - name: http
+              containerPort: 8000
               protocol: TCP
           resources:
             requests:
@@ -295,11 +302,18 @@ spec:
             limits:
               cpu: "{{ kubernetes_dashboard_metrics_scraper.container.limits_cpu }}"
               memory: "{{ kubernetes_dashboard_metrics_scraper.container.limits_memory }}"
+          readinessProbe:
+            httpGet:
+              scheme: HTTP
+              path: /
+              port: http
+            initialDelaySeconds: 30
+            timeoutSeconds: 30
           livenessProbe:
             httpGet:
               scheme: HTTP
               path: /
-              port: 8000
+              port: http
             initialDelaySeconds: 30
             timeoutSeconds: 30
           volumeMounts:
