Add dedicated busybox variable for initContainers

--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
@@ -23,7 +23,7 @@ spec:
     spec:
       initContainers:
       - name: create-folders
-        image: busybox
+        image: "{{ busybox.container.image }}"
         command:
           - "sh"
           - "-c"
