--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
     spec:
       initContainers:
       - name: inject-properties
-        image: busybox
+        image: "{{ busybox.container.image }}"
         command: [ "sh", "/config/inject_properties.sh" ]
         volumeMounts:
         - name: airsonic-data-pv-claim
