--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
@@ -72,7 +72,7 @@ spec:
             value: "-Xms512m -Xmx512m"
       initContainers:
       - name: fix-permissions
-        image: busybox
+        image: "{{ busybox.container.image }}"
         command: ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
         securityContext:
           privileged: true
@@ -80,12 +80,12 @@ spec:
         - name: elasticsearch-pv-claim
           mountPath: /usr/share/elasticsearch/data
       - name: increase-vm-max-map
-        image: busybox
+        image: "{{ busybox.container.image }}"
         command: ["sysctl", "-w", "vm.max_map_count=262144"]
         securityContext:
           privileged: true
       - name: increase-fd-ulimit
-        image: busybox
+        image: "{{ busybox.container.image }}"
         command: ["sh", "-c", "ulimit -n 65536"]
         securityContext:
           privileged: true
