Fix infra-zonemta redis persistance not enabled

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -24,6 +24,7 @@ spec:
         command:
         - redis-server
         - "--requirepass {{ zonemta_redis.password }}"
+        - "--appendonly yes"
         ports:
         - containerPort: 6379
           name: redis
