Add readinessProbe for infra-zonemta

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -36,6 +36,14 @@ spec:
         ports:
         - containerPort: 27017
           name: mongo
+        readinessProbe:
+          exec:
+            command:
+            - mongo
+            - --eval
+            - "db.adminCommand('ping')"
+          initialDelaySeconds: 10
+          periodSeconds: 10
         resources:
           requests:
             cpu: "{{ zonemta_mongo.container.requests_cpu }}"
