--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -31,6 +31,11 @@ spec:
           name: smtp
         - containerPort: 12080
           name: metrics
+        readinessProbe:
+          tcpSocket:
+            port: smtp
+          initialDelaySeconds: 10
+          periodSeconds: 10
         resources:
           requests:
             cpu: "{{ zonemta.container.requests_cpu }}"
