Implement manifest best practices for infra-reloader

--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
@@ -21,7 +21,12 @@ spec:
       containers:
       - name: reloader
         image: "{{ reloader.container.image }}"
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ reloader.container.requests_cpu }}"
