Add readinessProbe for infra-mailhog

--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -41,6 +41,11 @@ spec:
           name: smtp
         - containerPort: 8025
           name: http
+        readinessProbe:
+          tcpSocket:
+            port: smtp
+          initialDelaySeconds: 10
+          periodSeconds: 10
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
