--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
@@ -15,7 +15,7 @@ spec:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /docker-regitry-ui
+        - path: {{ docker_registry_ui.context_root }}
           backend:
             serviceName: docker-registry-ui
             servicePort: 8000
