--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
@@ -18,4 +18,4 @@ spec:
         - path: {{ docker_registry_ui.context_root }}
           backend:
             serviceName: docker-registry-ui
-            servicePort: 8000
+            servicePort: http
