Implement manifest best practices for infra-docker-registry

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/config.yml.j2
@@ -15,7 +15,12 @@ health:
     interval: 10s
     threshold: 3
 http:
-  addr: :5000
+  addr: :5443
+
+  tls:
+    certificate: /certs/server.crt
+    key: /certs/server.key
+
   headers:
     X-Content-Type-Options: [nosniff]
   
