--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
@@ -10,7 +10,8 @@ spec:
   type: NodePort
   ports:
     - port: 443
-      targetPort: 443
+      name: docker-registry
+      targetPort: docker-registry
       nodePort: {{ docker_registry.port }}
   selector:
     {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
